✨FEATURE: 내가 받은 초대 조회 코드 리팩토링(#130)